# mineru-zotero-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: paper-wiki-ingest.md
commands/: paper-wiki.md
skills/paper-wiki/: SKILL.md
skills/paper-wiki/scripts/: build_paper_indexes.py  lint_paper_wiki.py
src/mineru_zotero_mcp/: __init__.py  _app.py  _ctx.py  anchor_generator.py  arxiv_bridge.py  figure_merger.py  fragment_detector.py  mineru_client.py  parse_persist.py  pdf_renderer.py  quota.py  recommendations_bridge.py  server.py  store.py  table_normalizer.py  types.py  webdav_bridge.py  zotero_bridge.py
src/mineru_zotero_mcp/tools/: __init__.py  anchors.py  arxiv.py  candidates.py  capture.py  catalog.py  doctor.py  evidence.py  markdown.py  parse.py  quota.py  recommendations.py
tests/: e2e_batch.py  e2e_mineru.py  test_anchor_generator.py  test_arxiv_bridge.py  test_catalog_tool.py  test_doctor_tool.py  test_evidence_tool.py  test_figure_merger.py  test_fragment_detector.py  test_parse_persist.py  test_quota.py  test_recommendations_bridge.py  test_store.py  test_table_normalizer.py
