[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineru-zotero-mcp-server"
version = "0.1.0"
description = "MCP server bridging Zotero PDFs and MinerU extraction for evidence-grounded paper reading in Obsidian"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zhouqm" }]
keywords = ["zotero", "mineru", "mcp", "obsidian", "pdf", "annotation", "research"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Reuse zotero-mcp internals (LocalZoteroReader, BBT client) + pymupdf via [pdf] extra
    "zotero-mcp-server[pdf]",
    "mcp>=1.2.0",
    "fastmcp>=2.14.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.9.0",
]

[project.scripts]
mineru-zotero-mcp = "mineru_zotero_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mineru_zotero_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
